tests/algorithms/transpiler/CPP/backtracking/n_queens_math.cpp
// Generated by Mochi transpiler v0.10.59 on 2025-08-06 16:38:48 GMT+7
#include <iostream>
#include <string>
#include <vector>
#include <sstream>
#include <iomanip>
#include <cmath>
#include <optional>
#include <any>
#include <type_traits>
#include <cstdlib>
#include <chrono>
#include <sys/resource.h>
#include <unistd.h>
#include <cstdio>
#include <map>


static int _now() {
    static long long seed = 0;
    static bool seeded = false;
    if (!seeded) {
        const char* s = std::getenv("MOCHI_NOW_SEED");
        if (s && *s) { seed = std::atoll(s); seeded = true; }
    }
    if (seeded) {
        seed = (seed * 1664525 + 1013904223) % 2147483647;
        return static_cast<int>(seed);
    }
    return (int)(std::chrono::duration_cast<std::chrono::microseconds>(std::chrono::system_clock::now().time_since_epoch()).count() % 2147483647);
}
static long long _mem() {
#if defined(__linux__)
    long long rss = 0;
    FILE* f = std::fopen("/proc/self/statm", "r");
    if (f) { long long pages; if (std::fscanf(f, "%*s %lld", &pages) == 1) rss = pages * sysconf(_SC_PAGESIZE); std::fclose(f); }
    if (rss == 0) {
        f = std::fopen("/proc/self/status", "r");
        if (f) {
            char buf[256];
            while (std::fgets(buf, sizeof buf, f)) {
                long long val;
                if (std::sscanf(buf, "VmRSS: %lld", &val) == 1 || std::sscanf(buf, "VmHWM: %lld", &val) == 1) {
                    rss = val * 1024;
                    break;
                }
            }
            std::fclose(f);
        }
    }
    if (rss == 0) {
        struct rusage usage{};
        getrusage(RUSAGE_SELF, &usage);
        rss = (long long)usage.ru_maxrss * 1024;
    }
    return rss;
#elif defined(__APPLE__)
    struct rusage usage{};
    getrusage(RUSAGE_SELF, &usage);
    return (long long)usage.ru_maxrss;
#else
    struct rusage usage{};
    getrusage(RUSAGE_SELF, &usage);
    return (long long)usage.ru_maxrss * 1024;
#endif
}
static long long _bench_now() {
    return std::chrono::duration_cast<std::chrono::microseconds>(std::chrono::system_clock::now().time_since_epoch()).count();
}
static std::string _repeat(const std::string& s, int64_t n) {
    std::string out; out.reserve(s.size()*n);
    for(int64_t i=0;i<n;i++) out += s;
    return out;
}
static void any_to_stream(std::ostream& os, const std::any& val) {
    if(val.type() == typeid(int)) os << std::any_cast<int>(val);
    else if(val.type() == typeid(int64_t)) os << std::any_cast<int64_t>(val);
    else if(val.type() == typeid(double)) os << std::any_cast<double>(val);
    else if(val.type() == typeid(bool)) os << (std::any_cast<bool>(val) ? "true" : "false");
    else if(val.type() == typeid(std::string)) os << std::quoted(std::any_cast<std::string>(val));
    else if(val.type() == typeid(std::vector<int64_t>)) { const auto& v = std::any_cast<const std::vector<int64_t>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ' '; os << v[i]; } os << ']'; }
    else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ' '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ' '; os << v[j]; } os << ']'; } os << ']'; }
    else if(val.type() == typeid(std::vector<std::string>)) { const auto& v = std::any_cast<const std::vector<std::string>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ' '; os << std::quoted(v[i]); } os << ']'; }
    else if(val.type() == typeid(std::vector<std::any>)) { const auto& v = std::any_cast<const std::vector<std::any>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ' '; any_to_stream(os, v[i]); } os << ']'; }
    else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
    else os << "<any>";
}
static double any_to_double(const std::any& v) {
    if(v.type() == typeid(int)) return (double)std::any_cast<int>(v);
    if(v.type() == typeid(double)) return std::any_cast<double>(v);
    return 0;
}
static std::string any_to_string(const std::any& v) {
    if(v.type() == typeid(std::string)) return std::any_cast<std::string>(v);
    if(v.type() == typeid(int)) return std::to_string(std::any_cast<int>(v));
    if(v.type() == typeid(int64_t)) return std::to_string(std::any_cast<int64_t>(v));
    if(v.type() == typeid(double)) { std::ostringstream ss; ss << std::any_cast<double>(v); return ss.str(); }
    if(v.type() == typeid(bool)) return std::any_cast<bool>(v) ? "true" : "false";
    return std::string();
}
template <typename T>
std::ostream& operator<<(std::ostream& os, const std::vector<T>& vec) {
    os << "[";
    for(size_t i=0;i<vec.size();++i){ if(i>0) os << ' '; if constexpr(std::is_same_v<T, std::any>) any_to_stream(os, vec[i]); else os << vec[i]; }
    os << "]";
    return os;
}


template<typename T> std::string _to_string(const T& v) {
    std::ostringstream ss;
    ss << std::boolalpha << v;
    return ss.str();
}

bool contains(const std::vector<int64_t>& xs, int64_t x);
std::string repeat(std::string s, int64_t times);
std::vector<std::string> build_board(const std::vector<int64_t>& pos, int64_t n);
std::vector<std::vector<std::string>> depth_first_search(std::vector<int64_t>& pos, std::vector<int64_t>& dr, std::vector<int64_t>& dl, int64_t n);
int64_t n_queens_solution(int64_t n);
int main();

bool contains(const std::vector<int64_t>& xs, int64_t x) {
    int64_t i = int64_t(0);
    while ((i < xs.size())) {
        if ((xs[i] == x)) {
            return true;
        }
        i = (i + int64_t(1));
    }
    return false;
}

std::string repeat(std::string s, int64_t times) {
    std::string result = std::string("");
    int64_t i = int64_t(0);
    while ((i < times)) {
        result = (result + s);
        i = (i + int64_t(1));
    }
    return result;
}

std::vector<std::string> build_board(const std::vector<int64_t>& pos, int64_t n) {
    std::vector<std::string> board = {};
    int64_t i = int64_t(0);
    while ((i < pos.size())) {
        int64_t col = pos[i];
        std::string line = ((_repeat(std::string(". "), col) + std::string("Q ")) + _repeat(std::string(". "), ((n - int64_t(1)) - col)));
        board = ([&]{ auto __tmp = board; __tmp.push_back(line); return __tmp; }());
        i = (i + int64_t(1));
    }
    return board;
}

std::vector<std::vector<std::string>> depth_first_search(std::vector<int64_t>& pos, std::vector<int64_t>& dr, std::vector<int64_t>& dl, int64_t n) {
    int row = pos.size();
    if ((row == n)) {
        std::vector<std::vector<std::string>> single = {};
        single = ([&]{ auto __tmp = single; __tmp.push_back(build_board(pos, n)); return __tmp; }());
        return single;
    }
    std::vector<std::vector<std::string>> boards = {};
    int64_t col = int64_t(0);
    while ((col < n)) {
        if (((contains(pos, col) || contains(dr, (int64_t)((row - col)))) || contains(dl, (int64_t)((row + col))))) {
            col = (col + int64_t(1));
            continue;
        }
        std::vector<std::vector<std::string>> result = depth_first_search((std::vector<int64_t>)(([&]{ auto __tmp = pos; __tmp.push_back(col); return __tmp; }())), (std::vector<int64_t>)(([&]{ auto __tmp = dr; __tmp.push_back((int64_t)(row - col)); return __tmp; }())), (std::vector<int64_t>)(([&]{ auto __tmp = dl; __tmp.push_back((int64_t)(row + col)); return __tmp; }())), n);
        boards = concat(boards, result);
        col = (col + int64_t(1));
    }
    return boards;
}

int64_t n_queens_solution(int64_t n) {
    std::vector<std::vector<std::string>> boards = depth_first_search(std::vector<int64_t>{}, std::vector<int64_t>{}, std::vector<int64_t>{}, n);
    int64_t i = int64_t(0);
    while ((i < boards.size())) {
        int64_t j = int64_t(0);
        while ((j < boards[i].size())) {
            std::cout << boards[i][j];
            std::cout << std::endl;
            j = (j + int64_t(1));
        }
        std::cout << std::string("");
        std::cout << std::endl;
        i = (i + int64_t(1));
    }
    std::cout << boards.size();
    std::cout << " ";
    std::cout << std::string("solutions were found.");
    std::cout << std::endl;
    return boards.size();
}

int main() {
    {
        struct __BenchGuard {
            long long start;
            __BenchGuard() : start(_bench_now()) {}
            ~__BenchGuard() {
                    auto __bench_end = _bench_now();
                    auto __bench_mem = _mem();
                    auto __bench_dur = __bench_end - start;
                    std::cout << "{\n  \"duration_us\": " << __bench_dur << ",\n  \"memory_bytes\": " << __bench_mem << ",\n  \"name\": \"main\"\n}" << std::endl;
            }
        } __bench_guard;
        n_queens_solution(int64_t(4));
    }
    return 0;
}
